trunk/Archive2/a8/267541b27a1e09/output
main.cpp:6:30: error: expected ';' at end of member declaration
     bool b = std::is_same<T, none>::value;
                              ^
main.cpp:6:34: error: expected unqualified-id before '>' token
     bool b = std::is_same<T, none>::value;
                                  ^
main.cpp:6:27: error: wrong number of template arguments (1, should be 2)
     bool b = std::is_same<T, none>::value;
                           ^
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/type_traits:896:12: error: provided for 'template<class, class> struct std::is_same'
     struct is_same;
            ^
1
