trunk/Archive2/a8/267541b27a1e09/main.cpp
#include <type_traits>
struct none {};

template<typename T>
struct test {
    bool b = std::is_same<T, none>::value;
};

int main() {
    test<int> x;
    return x.b;
}